# smart_math

./: CMakeLists.txt  README.md  main.cpp  smart_functional.cpp  smart_functional.h  smart_functional_additional.cpp
smart_functional/: smart_functional.cpp  smart_functional_additional.cpp  smart_functional_additional.h
smart_integral/: smart_integral.cpp  smart_integral.h
smart_naturals/: smart_naturals.cpp  smart_naturals.h
smart_polynomial/: smart_polynomial.cpp  smart_polynomial.h
smart_rational/: smart_rational.cpp  smart_rational.h
